# wsclip

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
apps/client/: .gitignore  CLAUDE.md  Program.cs  README.md  WSClip.csproj  WSClip.sln  pyproject.toml  wsclip.spec
apps/client/Clipboard/: ClipboardContent.cs  ClipboardMonitor.cs  ClipboardReader.cs  ClipboardWriter.cs  NativeMethods.cs
apps/client/Config/: AppConfig.cs  ConfigLoader.cs  ConfigValidator.cs  ConfigWizard.cs
apps/client/Network/: Socks5Connector.cs  WebSocketClient.cs
apps/client/Protocol/: MessageFactory.cs  Messages.cs
apps/client/Sync/: ContentTracker.cs  SyncService.cs  TempFileManager.cs
apps/client/Utils/: BackoffCalculator.cs  Logger.cs  SizeFormatter.cs
apps/client/docs/: SPECIFICATION.md
apps/client/src/wsclip/: __init__.py  __main__.py
apps/client/src/wsclip/cli/: __init__.py  app.py  commands.py  config_wizard.py
apps/client/src/wsclip/config/: constants.py  settings.py
apps/client/src/wsclip/core/: __init__.py  connection.py  pairing.py  sync_manager.py
apps/client/src/wsclip/models/: __init__.py  config.py  messages.py
apps/client/src/wsclip/services/: __init__.py  clipboard.py  hotkeys.py  websocket.py
apps/client/src/wsclip/utils/: helpers.py  logger.py  paths.py  tui.py
apps/relay/: .dockerignore  .env.example  CLAUDE.md  CRSP-PROTOCOL-PROPOSAL.md  Dockerfile  README.md  biome.json  compose.yaml  package.json  playground.html  pnpm-lock.yaml  (+3 more)
cloudflare-worker/: .gitignore  package.json  pnpm-lock.yaml  wrangler.toml
(+98 files in other folders)
