[project]
name = "wsclip"
version = "0.0.2"
description = "WebSocket-based clipboard sync for P2P communication"
requires-python = ">=3.12"
dependencies = [
    "websockets>=11.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0",
    "requests>=2.31.0",
    "pyperclip>=1.11.0",
    "pynput>=1.8.1",
    "python-socks[asyncio]>=2.7.2",
]

[project.scripts]
wsclip = "wsclip.cli.app:cli"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
]

# Ruff
[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "T20", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

# Pyrefly
[tool.pyrefly]
project-includes = ["src"]
